fix: Update hoverlinks to use light and dark mode colors

--- a/web-app/static/index.css
+++ b/web-app/static/index.css
@@ -103,7 +103,7 @@ main {
 }
 
 .alarm-status-box2.fire {
-  border: 2px solid var(--border-color);
+  border: 2px solid var(--link-hover-color);
 }
 
 .alarm-status-box2.no-fire {
@@ -111,7 +111,7 @@ main {
 }
 
 .fire {
-  color: var(--text-color);
+  color: var(--link-hover-color);
   font-size: 1em;
 }
 
